--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="open-sans-normal">
     <header class="header secondary-bg">
         <nav>
-            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+            <h3 class="nav-title">r<span class="text-primary">o</span>yy</h3>
             <ul>
                 <li><a class="dark-2" href="">Portfolio</a></li>
                 <li><a class="dark-2" href="">Blog</a></li>
@@ -26,7 +26,7 @@
         <div class="banner">
             <div class="banner-content">
                 <h4 class="banner-greetings dark-2">Hi, I am</h4>
-                <h1 class="banner-title">Mary Hardy</h1>
+                <h1 class="banner-title">ROY ANGON</h1>
                 <p class="banner-description">
                     Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society
                     behaved moments.
@@ -34,7 +34,7 @@
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
                 <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
-            <img class="banner-profile-pic" src="images/hardy.png" alt="">
+            <img style="border-radius: 50px;" class="banner-profile-pic" src="images/roy.jpg" alt="">
         </div>
     </header>
     <main>
@@ -50,15 +50,15 @@
                 <!-- .about-item*4>p.item-title+p.item-description -->
                 <div class="about-item">
                     <p class="item-title">Name</p>
-                    <p class="item-description">Mary Hardy</p>
+                    <p class="item-description">Roy Angon</p>
                 </div>
                 <div class="about-item">
                     <p class="item-title">Email</p>
-                    <p class="item-description">abc@def.com</p>
+                    <p class="item-description">royangon29@gmail.com</p>
                 </div>
                 <div class="about-item">
                     <p class="item-title">Date of Birth</p>
-                    <p class="item-description">Dec 16, 1971</p>
+                    <p class="item-description">september 29, 2001</p>
                 </div>
                 <div class="about-item">
                     <p class="item-title">From</p>
@@ -69,31 +69,39 @@
         <!-- what is do section start -->
         <section class="skills">
             <h3 class="section-title text-center">What I do</h3>
-            <p class="section-description text-center">I have more than 10 years experience building software for clients all over
+            <p class="section-description text-center">I have more than 8 years experience building software for clients
+                all over
                 the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
                 find out more about my experience? Check out my online resume and project portfolio.</p>
-            
+
             <div class="skills-container">
                 <!-- .skill*4>img+h4.skill-title+p.skill-description -->
                 <div class="skill">
                     <img src="images/icons/js.png" alt="">
                     <h4 class="skill-title">Vanilla JavaScript</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description"></p>HTML is the foundation that holds all the content and design
+                    elements together</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/react.png" alt="">
                     <h4 class="skill-title">React</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">React. js is an open-source JavaScript library, crafted with precision
+                        by Facebook, that aims to simplify the intricate process of building interactive user
+                        interfaces. </p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/nodejs.png" alt="">
                     <h4 class="skill-title">Node.js</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">
+                        As an asynchronous event-driven JavaScript runtime, Node.js is designed to build scalable
+                        network applications.</p>
                 </div>
                 <div class="skill">
                     <img src="images/icons/mongo.png" alt="">
                     <h4 class="skill-title">Mongodb</h4>
-                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                    <p class="skill-description">MongoDB has become one of the most wanted databases in the world
+                        because it makes it easy for developers to store, manage, and retrieve data when creating
+                        applications with most programming languages.</p>
                 </div>
             </div>
         </section>
@@ -104,50 +112,69 @@
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Education</h3>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Master of Business Administration(MBA) / 2028-2029 </h4>
+                        <h5 class="experience-sub-title">National University of Singapore(NUS)</h5>
+                        <div class="experience-description">I would like to briefly introduce some of my innovation
+                            projects and project highlights to you:
+                            <ul>
+                                <li>Information on Demand</li>
+                                <li>Digital Assistance Systems</li>
+                                <li>Blockchain</li>
+                                <li>Future Logistics</li>
+                            </ul>
+                        </div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Btech in Computer Science</h4>
+                        <h5 class="experience-sub-title">BRAC University / 2022 - 2027</h5>
+                        <div class="experience-description">List skill/technologies:
+                            <ul>
+                                <li>Softwere Testing</li>
+                                <li>Fornt-end Development</li>
+                                <li>Back-end Development</li>
+                                <li>Full-stack Development</li>
+                            </ul>
+                        </div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Training in Website Development</h4>
+                        <h5 class="experience-sub-title">Programing-Hero</h5>
+                        <div class="experience-description">Web Developers are required to be proficient at coding with languages like HTML, CSS, JavaScript for front-end development, and Python, Java, Ruby, and PHP for back-end programming. Knowledge of back-end languages is particularly useful for Full Stack Web Developers
+                        </div>
                     </div>
                 </div>
                 <div class="resume-column">
                     <h3 class="resume-column-title">My Experience</h3>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Senior Web Developer / 2028-present</h4>
+                        <h5 class="experience-sub-title">OLLYO-IT</h5>
+                        <div class="experience-description">I've been working here as a Senior Web Developer for more than 2 years
+                        </div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Junior Full-stack developer / 2026-2028</h4>
+                        <h5 class="experience-sub-title">Toffee.OTT Server</h5>
+                        <div class="experience-description">worked as a jr.full-stack developer in project "Myshell"
+                        </div>
                     </div>
                     <hr>
                     <div class="experience">
-                        <h4 class="experience-title">Master in Computer Engineering</h4>
-                        <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
-                        <div class="experience-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+                        <h4 class="experience-title">Fornt-End Developer Intern / 2025-2025</h4>
+                        <h5 class="experience-sub-title">Nobo IT LTD.</h5>
+                        <div class="experience-description">project highlights to you:
+                           <ul>
+                            <li>tap tap</li>
+                            <li>e-form</li>
+                            <li>jhank.money</li>
+                           </ul>
+
+                        </div>
                     </div>
                 </div>
-                
+
             </div>
             <div class="text-center resume-download-cv">
                 <button class="btn-primary"><i class="fa-solid fa-download"></i> Download CV</button>
@@ -156,8 +183,9 @@
     </main>
     <footer class="secondary-bg">
         <div class="footer-column">
-            <h3 class="section-title">Lets Connect</h3>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Sunday through Thursday.</p>
+            <h3 class="section-title">Let's Connect</h3>
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+                Sunday through Thursday.</p>
             <div>
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
                 <a href=""><img src="images/icons/insta.png" alt=""></a>
@@ -165,7 +193,7 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let’s Inbox me</h3>
+            <h3 class="section-title"> Inbox me</h3>
             <form action="">
                 <input type="text" name="" id="" placeholder="Your Name">
                 <input type="email" name="" id="" placeholder="Your Email">
