--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                                 <li>Future Logistics</li>
                             </ul>
                         </div>
+                        <a href="https://www.nus.edu.sg/">https://www.nus.edu.sg</a>
                     </div>
                     <hr>
                     <div class="experience">
@@ -135,7 +136,9 @@
                                 <li>Back-end Development</li>
                                 <li>Full-stack Development</li>
                             </ul>
+                            <a href="https://www.bracu.ac.bd/"></a>
                         </div>
+                        <a href="https://www.bracu.ac.bd/">https://www.bracu.ac.bd</a>
                     </div>
                     <hr>
                     <div class="experience">
@@ -184,7 +187,7 @@
     <footer class="secondary-bg">
         <div class="footer-column">
             <h3 class="section-title">Let's Connect</h3>
-            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET,
+            <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M GMT +6,
                 Sunday through Thursday.</p>
             <div>
                 <a href=""><img src="images/icons/facebook.png" alt=""></a>
