--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="nav-title">r<span class="text-primary">o</span>yy</h3>
             <ul>
@@ -38,7 +38,7 @@
         </div>
     </header>
     <main>
-        <section class="about secondary-bg">
+        <section class="about  ">
             <h3 class="section-title">About Me</h3>
             <p class="section-description">
                 I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
@@ -105,7 +105,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume ">
             <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
@@ -184,7 +184,7 @@
             </div>
         </section>
     </main>
-    <footer class="secondary-bg">
+    <footer class="secondary-bg ">
         <div class="footer-column">
             <h3 class="section-title">Let's Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M GMT +6,
