--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header secondary-bg hide">
+    <header class="header secondary-bg ">
         <nav>
             <h3 class="nav-title">r<span class="text-primary">o</span>yy</h3>
             <ul>
